--- a/_config.yml
+++ b/_config.yml
@@ -4,8 +4,9 @@ description: Academic Portfolio
 google_analytics: UA-64593219-1
 # Build settings
 url: http://www.charmainebonifacio.com
+permalink: pretty
 markdown: kramdown
-highlighter: pygments
+highlighter: pygmentsl
 exclude:
     - Gemfile
     - Gemfile.lock
